<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/rview_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name1"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/rview_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            <TextView
                android:id="@+id/rview_bloodgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blgrp"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/rview_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

